add break btwn candy and stripes

--- a/templates/results.html
+++ b/templates/results.html
@@ -9,147 +9,153 @@
 
 <br><br>
 
-<div class="pattern1">
-    <div class="row">
-        <div class="dot" style="background-color: {{ color1 }};"></div>
-        <div class="dot" style="background-color: {{ color2 }};"></div>
-        <div class="dot" style="background-color: {{ color3 }};"></div>
-    </div>
+<div class="pattern1-container">
+    <h3>Candy<br>Stripes</h3>
+    <div class="pattern1">
+        <div class="row">
+            <div class="dot" style="background-color: {{ color1 }};"></div>
+            <div class="dot" style="background-color: {{ color2 }};"></div>
+            <div class="dot" style="background-color: {{ color3 }};"></div>
+        </div>
 
-    <div class="row">
-        <div class="dot" style="background-color: {{ color3 }};"></div>
-        <div class="dot" style="background-color: {{ color1 }};"></div>
-        <div class="dot" style="background-color: {{ color2 }};"></div>
-    </div>
+        <div class="row">
+            <div class="dot" style="background-color: {{ color3 }};"></div>
+            <div class="dot" style="background-color: {{ color1 }};"></div>
+            <div class="dot" style="background-color: {{ color2 }};"></div>
+        </div>
 
-    <div class="row">
-        <div class="dot" style="background-color: {{ color2 }};"></div>
-        <div class="dot" style="background-color: {{ color3 }};"></div>
-        <div class="dot" style="background-color: {{ color1 }};"></div>
-    </div>
+        <div class="row">
+            <div class="dot" style="background-color: {{ color2 }};"></div>
+            <div class="dot" style="background-color: {{ color3 }};"></div>
+            <div class="dot" style="background-color: {{ color1 }};"></div>
+        </div>
 
-    <div class="row">
-        <div class="dot" style="background-color: {{ color1 }};"></div>
-        <div class="dot" style="background-color: {{ color2 }};"></div>
-        <div class="dot" style="background-color: {{ color3 }};"></div>
-    </div>
+        <div class="row">
+            <div class="dot" style="background-color: {{ color1 }};"></div>
+            <div class="dot" style="background-color: {{ color2 }};"></div>
+            <div class="dot" style="background-color: {{ color3 }};"></div>
+        </div>
 
-    <div class="row">
-        <div class="dot" style="background-color: {{ color3 }};"></div>
-        <div class="dot" style="background-color: {{ color1 }};"></div>
-        <div class="dot" style="background-color: {{ color2 }};"></div>
-    </div>
+        <div class="row">
+            <div class="dot" style="background-color: {{ color3 }};"></div>
+            <div class="dot" style="background-color: {{ color1 }};"></div>
+            <div class="dot" style="background-color: {{ color2 }};"></div>
+        </div>
 
-    <div class="row">
-        <div class="dot" style="background-color: {{ color2 }};"></div>
-        <div class="dot" style="background-color: {{ color3 }};"></div>
-        <div class="dot" style="background-color: {{ color1 }};"></div>
-    </div>
+        <div class="row">
+            <div class="dot" style="background-color: {{ color2 }};"></div>
+            <div class="dot" style="background-color: {{ color3 }};"></div>
+            <div class="dot" style="background-color: {{ color1 }};"></div>
+        </div>
 
-    <div class="row">
-        <div class="dot" style="background-color: {{ color1 }};"></div>
-        <div class="dot" style="background-color: {{ color2 }};"></div>
-        <div class="dot" style="background-color: {{ color3 }};"></div>
-    </div>
+        <div class="row">
+            <div class="dot" style="background-color: {{ color1 }};"></div>
+            <div class="dot" style="background-color: {{ color2 }};"></div>
+            <div class="dot" style="background-color: {{ color3 }};"></div>
+        </div>
 
-    <div class="row">
-        <div class="dot" style="background-color: {{ color3 }};"></div>
-        <div class="dot" style="background-color: {{ color1 }};"></div>
-        <div class="dot" style="background-color: {{ color2 }};"></div>
-    </div>
+        <div class="row">
+            <div class="dot" style="background-color: {{ color3 }};"></div>
+            <div class="dot" style="background-color: {{ color1 }};"></div>
+            <div class="dot" style="background-color: {{ color2 }};"></div>
+        </div>
 
-    <div class="row">
-        <div class="dot" style="background-color: {{ color2 }};"></div>
-        <div class="dot" style="background-color: {{ color3 }};"></div>
-        <div class="dot" style="background-color: {{ color1 }};"></div>
-    </div>
+        <div class="row">
+            <div class="dot" style="background-color: {{ color2 }};"></div>
+            <div class="dot" style="background-color: {{ color3 }};"></div>
+            <div class="dot" style="background-color: {{ color1 }};"></div>
+        </div>
 
-    <div class="row">
-        <div class="dot" style="background-color: {{ color1 }};"></div>
-        <div class="dot" style="background-color: {{ color2 }};"></div>
-        <div class="dot" style="background-color: {{ color3 }};"></div>
+        <div class="row">
+            <div class="dot" style="background-color: {{ color1 }};"></div>
+            <div class="dot" style="background-color: {{ color2 }};"></div>
+            <div class="dot" style="background-color: {{ color3 }};"></div>
+        </div>
     </div>
 </div>
 
-<div class="pattern2">
-    <div class="row">
-        <div class="dot" style="background-color: {{ color1 }};"></div>
-        <div class="dot" style="background-color: {{ color2 }};"></div>
-        <div class="dot" style="background-color: {{ color3 }};"></div>
-        <div class="dot" style="background-color: {{ color2 }};"></div>
-        <div class="dot" style="background-color: {{ color1 }};"></div>
-    </div>
+<div class="pattern2-container">
+    <h3>Chevrons</h3>
+    <div class="pattern2">
+        <div class="row">
+            <div class="dot" style="background-color: {{ color1 }};"></div>
+            <div class="dot" style="background-color: {{ color2 }};"></div>
+            <div class="dot" style="background-color: {{ color3 }};"></div>
+            <div class="dot" style="background-color: {{ color2 }};"></div>
+            <div class="dot" style="background-color: {{ color1 }};"></div>
+        </div>
 
-    <div class="row">
-        <div class="dot" style="background-color: {{ color3 }};"></div>
-        <div class="dot" style="background-color: {{ color1 }};"></div>
-        <div class="dot" style="background-color: {{ color2 }};"></div>
-        <div class="dot" style="background-color: {{ color1 }};"></div>
-        <div class="dot" style="background-color: {{ color3 }};"></div>
-    </div>
+        <div class="row">
+            <div class="dot" style="background-color: {{ color3 }};"></div>
+            <div class="dot" style="background-color: {{ color1 }};"></div>
+            <div class="dot" style="background-color: {{ color2 }};"></div>
+            <div class="dot" style="background-color: {{ color1 }};"></div>
+            <div class="dot" style="background-color: {{ color3 }};"></div>
+        </div>
 
-    <div class="row">
-        <div class="dot" style="background-color: {{ color2 }};"></div>
-        <div class="dot" style="background-color: {{ color3 }};"></div>
-        <div class="dot" style="background-color: {{ color1 }};"></div>
-        <div class="dot" style="background-color: {{ color3 }};"></div>
-        <div class="dot" style="background-color: {{ color2 }};"></div>
-    </div>
+        <div class="row">
+            <div class="dot" style="background-color: {{ color2 }};"></div>
+            <div class="dot" style="background-color: {{ color3 }};"></div>
+            <div class="dot" style="background-color: {{ color1 }};"></div>
+            <div class="dot" style="background-color: {{ color3 }};"></div>
+            <div class="dot" style="background-color: {{ color2 }};"></div>
+        </div>
 
-    <div class="row">
-        <div class="dot" style="background-color: {{ color1 }};"></div>
-        <div class="dot" style="background-color: {{ color2 }};"></div>
-        <div class="dot" style="background-color: {{ color3 }};"></div>
-        <div class="dot" style="background-color: {{ color2 }};"></div>
-        <div class="dot" style="background-color: {{ color1 }};"></div>
-    </div>
+        <div class="row">
+            <div class="dot" style="background-color: {{ color1 }};"></div>
+            <div class="dot" style="background-color: {{ color2 }};"></div>
+            <div class="dot" style="background-color: {{ color3 }};"></div>
+            <div class="dot" style="background-color: {{ color2 }};"></div>
+            <div class="dot" style="background-color: {{ color1 }};"></div>
+        </div>
 
-    <div class="row">
-        <div class="dot" style="background-color: {{ color3 }};"></div>
-        <div class="dot" style="background-color: {{ color1 }};"></div>
-        <div class="dot" style="background-color: {{ color2 }};"></div>
-        <div class="dot" style="background-color: {{ color1 }};"></div>
-        <div class="dot" style="background-color: {{ color3 }};"></div>
-    </div>
+        <div class="row">
+            <div class="dot" style="background-color: {{ color3 }};"></div>
+            <div class="dot" style="background-color: {{ color1 }};"></div>
+            <div class="dot" style="background-color: {{ color2 }};"></div>
+            <div class="dot" style="background-color: {{ color1 }};"></div>
+            <div class="dot" style="background-color: {{ color3 }};"></div>
+        </div>
 
-    <div class="row">
-        <div class="dot" style="background-color: {{ color2 }};"></div>
-        <div class="dot" style="background-color: {{ color3 }};"></div>
-        <div class="dot" style="background-color: {{ color1 }};"></div>
-        <div class="dot" style="background-color: {{ color3 }};"></div>
-        <div class="dot" style="background-color: {{ color2 }};"></div>
-    </div>
+        <div class="row">
+            <div class="dot" style="background-color: {{ color2 }};"></div>
+            <div class="dot" style="background-color: {{ color3 }};"></div>
+            <div class="dot" style="background-color: {{ color1 }};"></div>
+            <div class="dot" style="background-color: {{ color3 }};"></div>
+            <div class="dot" style="background-color: {{ color2 }};"></div>
+        </div>
 
-    <div class="row">
-        <div class="dot" style="background-color: {{ color1 }};"></div>
-        <div class="dot" style="background-color: {{ color2 }};"></div>
-        <div class="dot" style="background-color: {{ color3 }};"></div>
-        <div class="dot" style="background-color: {{ color2 }};"></div>
-        <div class="dot" style="background-color: {{ color1 }};"></div>
-    </div>
+        <div class="row">
+            <div class="dot" style="background-color: {{ color1 }};"></div>
+            <div class="dot" style="background-color: {{ color2 }};"></div>
+            <div class="dot" style="background-color: {{ color3 }};"></div>
+            <div class="dot" style="background-color: {{ color2 }};"></div>
+            <div class="dot" style="background-color: {{ color1 }};"></div>
+        </div>
 
-    <div class="row">
-        <div class="dot" style="background-color: {{ color3 }};"></div>
-        <div class="dot" style="background-color: {{ color1 }};"></div>
-        <div class="dot" style="background-color: {{ color2 }};"></div>
-        <div class="dot" style="background-color: {{ color1 }};"></div>
-        <div class="dot" style="background-color: {{ color3 }};"></div>
-    </div>
+        <div class="row">
+            <div class="dot" style="background-color: {{ color3 }};"></div>
+            <div class="dot" style="background-color: {{ color1 }};"></div>
+            <div class="dot" style="background-color: {{ color2 }};"></div>
+            <div class="dot" style="background-color: {{ color1 }};"></div>
+            <div class="dot" style="background-color: {{ color3 }};"></div>
+        </div>
 
-    <div class="row">
-        <div class="dot" style="background-color: {{ color2 }};"></div>
-        <div class="dot" style="background-color: {{ color3 }};"></div>
-        <div class="dot" style="background-color: {{ color1 }};"></div>
-        <div class="dot" style="background-color: {{ color3 }};"></div>
-        <div class="dot" style="background-color: {{ color2 }};"></div>
-    </div>
+        <div class="row">
+            <div class="dot" style="background-color: {{ color2 }};"></div>
+            <div class="dot" style="background-color: {{ color3 }};"></div>
+            <div class="dot" style="background-color: {{ color1 }};"></div>
+            <div class="dot" style="background-color: {{ color3 }};"></div>
+            <div class="dot" style="background-color: {{ color2 }};"></div>
+        </div>
 
-    <div class="row">
-        <div class="dot" style="background-color: {{ color1 }};"></div>
-        <div class="dot" style="background-color: {{ color2 }};"></div>
-        <div class="dot" style="background-color: {{ color3 }};"></div>
-        <div class="dot" style="background-color: {{ color2 }};"></div>
-        <div class="dot" style="background-color: {{ color1 }};"></div>
+        <div class="row">
+            <div class="dot" style="background-color: {{ color1 }};"></div>
+            <div class="dot" style="background-color: {{ color2 }};"></div>
+            <div class="dot" style="background-color: {{ color3 }};"></div>
+            <div class="dot" style="background-color: {{ color2 }};"></div>
+            <div class="dot" style="background-color: {{ color1 }};"></div>
+        </div>
     </div>
 </div>
 
