--- a/static/styles.css
+++ b/static/styles.css
@@ -32,6 +32,12 @@ body {
     margin-right: 20px;
 }
 
+.pattern3-container {
+    display: inline-block;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
 .dot {
     width: 20px;
     height: 20px;
